# CC-Projects

./: .gitignore  .gitmodules  README.md
C-gui/: CMakeLists.txt
C-gui/include/: glad.c
C-gui/include/glad/: glad.h
C-gui/src/: main.c
